--- a/crop_rotator/templates/base.html
+++ b/crop_rotator/templates/base.html
@@ -48,6 +48,11 @@
           <li class="nav-item active">
             <a class="nav-link " href="{% url 'about' %}">{{ items.about }}</a>
           </li>
+          {% if user.is_authenticated %}
+          <li class="nav-item active">
+            <a class="nav-link " href="{% url 'new_plan' %}">{{ items.new_plan }}</a>
+          </li>
+          {% endif %}
         <li>
         <button class="btn btn-light my-2 my-sm-0 ">
             {% if user.is_authenticated %}
