Podmianka nazwy strony do zarządzania planami

--- a/crop_rotator/templates/base.html
+++ b/crop_rotator/templates/base.html
@@ -50,7 +50,7 @@
           </li>
           {% if user.is_authenticated %}
           <li class="nav-item active">
-            <a class="nav-link " href="{% url 'new_plan' %}">{{ items.new_plan }}</a>
+            <a class="nav-link " href="{% url 'my_plans' %}">{{ items.new_plan }}</a>
           </li>
           {% endif %}
         <li>
