Dodano limit 12 planów zmianowania na usera
Redirect do strony ze wszystkimi planami usera

--- a/crop_rotator/strona/templates/strona/my_plans.html
+++ b/crop_rotator/strona/templates/strona/my_plans.html
@@ -14,20 +14,54 @@
 <br>
 <br>
     <main role="main">
+      <h2>{{ items.new_plan }}</h2>
       <div class="row">
-        <div class="col-md-7 blog-main">
+
+        <div class="col-md-4 blog-main">
+          {% for plan in user_plans|slice:":4" %}
+          {% if plan %}
           <div class="container">
-            <p>Tutaj idzie formularz dodawania nowego planu z pierwszym krokiem</p>
+            <p>{{ plan.title }}</p>
             <br />
           </div>
+          {% endif %}
+          {% endfor %}
+        </div>
+        <div class="col-md-4 blog-main">
+          {% for plan in user_plans|slice:"4:8" %}
+          {% if plan %}
+          <div class="container">
+            <p>{{ plan.title }}</p>
+            <br />
+          </div>
+          {% endif %}
+          {% endfor %}
+        </div>
+        <div class="col-md-4 blog-main">
+          {% for plan in user_plans|slice:"8:12" %}
+          {% if plan %}
+          <div class="container">
+            <p>{{ plan.title }}</p>
+            <br />
+          </div>
+          {% endif %}
+          {% endfor %}
         </div>
       </div><!-- /.row -->
       <div class="container kol">
+    {% if user_limit %}
+    <p> $Osiągnąłeś limit 12 planów zmianowania na użytkownika.
+      Limit został nałożony w celu przeciwdziałania aktywności złośliwych botów.
+      Jeśli nie jesteś Botem, to bardzo Cię przepraszam za niedogodność.
+      Skasuj już niepotrzebne plany, lub załóż swoje nowe anonimowe konto.
+    </p>
+    {% else %}
       <form enctype="multipart/form-data" method="post"> <!-- Do wysyłania plików -->
       {% csrf_token %}
 
-      <p class="wnioski2">$Tytuł/Nazwa : {{ form.title }}</p>
-      <button id="send" class="button btn btn-dark btn-sm" type="submit">$Dodaj nowy dział.</button>
+      <p class="wnioski2">$Tytuł/Nazwa planu: {{ form.title }}</p>
+      <button id="send" class="button btn btn-dark btn-sm" type="submit">$Dodaj nowy plan.</button>
+    {% endif %}
     </div>
     </main>
     <!-- empty div -->
