--- a/crop_rotator/strona/templates/strona/user_plan_parts/plan_entry.html
+++ b/crop_rotator/strona/templates/strona/user_plan_parts/plan_entry.html
@@ -1,14 +1,10 @@
 {% if plan %}
 <div class="row">
-<div class="col-8">
+<div class="col-10">
   <p>{{ plan.title }}</p>
   <br />
 </div>
 <div class="col-2">
-Edit
-</div>
-<div class="col-2">
-Delete
-</div>
+<button class="button btn btn-dark btn-sm" href="url 'plan_edit' plan.id ">{{ items.edit }}</button>
 </div>
 {% endif %}
