--- a/crop_rotator/strona/templates/strona/user_plan_parts/plan_entry.html
+++ b/crop_rotator/strona/templates/strona/user_plan_parts/plan_entry.html
@@ -5,7 +5,7 @@
   <br />
 </div>
 <div class="col-2">
-  <button class="button btn btn-dark btn-sm" href="url 'plan_edit' plan.id ">{{ items.editme }}</button>
+  <button class="button btn btn-dark btn-sm"><a href="{% url 'plan_edit' plan.id %}">{{ items.editme }}</a></button>
 </div>
 </div>
 {% endif %}
