Dodawanie pierwszego kroku działa

--- a/crop_rotator/strona/templates/strona/my_plans.html
+++ b/crop_rotator/strona/templates/strona/my_plans.html
@@ -45,6 +45,7 @@
 
       <p class="wnioski2">$Tytuł/Nazwa planu: {{ form.title }}</p>
       <button id="send" class="button btn btn-dark btn-sm" type="submit">$Dodaj nowy plan.</button>
+      </form>
     {% endif %}
     </div>
     </main>
