--- a/crop_rotator/strona/templates/strona/plan.html
+++ b/crop_rotator/strona/templates/strona/plan.html
@@ -33,6 +33,20 @@
              </form> <!-- Koniec formularz usuwającego wydarzenie -->
             </div>
             <br />
+            {% if plan.published %}
+            <form name="UnpublishUserPlanForm" method="post" class="form form-inline"> <!-- Formularz usuwa wydarzenie -->
+             {% csrf_token %}
+             <p class="wnioski2">
+               <button class="btn btn-link-3 btn-light" name="unpublish_plan" type="submit">$Wycofaj!</button> -
+               $Wycofaj plan z publikacji. *onhover(Nie będzie widoczny na stronie głównej i w spisie planów).</p>
+           </form>
+            {% else %}
+            <form name="PublishUserPlanForm" method="post" class="form form-inline"> <!-- Formularz usuwa wydarzenie -->
+             {% csrf_token %}
+             <p class="wnioski2"><button class="btn btn-link-3 btn-light" name="publish_plan" type="submit">
+               $Publikuj!</button>$Opublikuj plan. *onhover(Może zostać wylosowany na stronie głównej i będzie dostępny w spisie wszystkich planów).</p>
+           </form>
+            {% endif %}
 
             {% if cr_len_warning %}
               <h4>Błąd: Ten płodozmian jest za krótki!</h4>
