Strona się cache'uje w newralgicznych momentach
Serwer powinien być odciążony.

--- a/crop_rotator/strona/templates/strona/plan.html
+++ b/crop_rotator/strona/templates/strona/plan.html
@@ -23,6 +23,7 @@
           <div class="container">
             <h1 class="text-center pt-3 ">{{ plan.title }}</h1>
             <h4 class="pt-2">{{ plan.pubdate_short }}</h4>
+            {% if user_editable %}
             <button class="btn btn-link-3 btn-light untoggle" value="0" name="safety_valve_event">$Usuń plan</button>
             <div name="EventButtonHiddenDiv" class="toggle" style="display: none" value="0">
              <form name="EventDeleteForm" method="post" class="form form-inline"> <!-- Formularz usuwa wydarzenie -->
@@ -46,6 +47,7 @@
              <p class="wnioski2"><button class="btn btn-link-3 btn-light" name="publish_plan" type="submit">
                $Publikuj!</button>$Opublikuj plan. *onhover(Może zostać wylosowany na stronie głównej i będzie dostępny w spisie wszystkich planów).</p>
            </form>
+            {% endif %}
             {% endif %}
 
             {% if cr_len_warning %}
