--- a/crop_rotator/strona/templates/strona/allplans.html
+++ b/crop_rotator/strona/templates/strona/allplans.html
@@ -17,12 +17,12 @@
           <hr class="featurette-divider">
            <div class="row featurette kol">
              <div class="col-md-5 kol">
-               <a href="{% url 'plan' plan.id %}"><img class="imgshdw float-left img-fluid" src="{{ skin.planimagedefault.url }}" /></a>
+               <a href="{% url 'lurk_plan' plan.id %}"><img class="imgshdw float-left img-fluid" src="{{ skin.planimagedefault.url }}" /></a>
              </div>
              <div class="col-md-7 kol">
                <!-- Tutaj gdzieś dodaj soil type -->
-               <a href="{% url 'plan' plan.id %}"><h2 class="featurette-heading title">{{ plan.title }}</h2></a> <h5 class="text-muted">{{ plan.pubdate_short }}</h5>
-               <a href="{% url 'plan' plan.id %}">Czytaj dalej...-roboczy</a>
+               <a href="{% url 'lurk_plan' plan.id %}"><h2 class="featurette-heading title">{{ plan.title }}</h2></a> <h5 class="text-muted">{{ plan.pubdate_short }}</h5>
+               <a href="{% url 'lurk_plan' plan.id %}">Czytaj dalej...-roboczy</a>
              </div>
            </div>
         {% endfor %}
