--- a/crop_rotator/strona/templates/strona/plan.html
+++ b/crop_rotator/strona/templates/strona/plan.html
@@ -71,6 +71,14 @@
 
               <h1>{{ step.title }}</h1>
 
+              Zamień z innym krokiem w planie:
+              <form name="SwitchStepsForm" method="post" class="form form-inline"> <!-- Formularz usuwa wydarzenie -->
+               {% csrf_token %}
+               <p class="wnioski2">
+                 
+                 <button class="btn btn-link-3 btn-light" name="move_plan" type="submit">$Zamień miejscami!</button></p>
+             </form>
+
               {% error_tab step_no=step.order as is_tab_error %}
               {% if is_tab_error %}
                 <h5>Ten krok zawiera błędy!!!</h5>
