--- a/crop_rotator/strona/templates/strona/plan.html
+++ b/crop_rotator/strona/templates/strona/plan.html
@@ -73,7 +73,8 @@
 
               Zamień z innym krokiem w planie:
 
-              <button class="btn btn-link-3 btn-light" name="move_plan" type="submit">$Zamień miejscami!</button></p>
+              <button class="btn btn-link-3 btn-light" name="move_plan" type="submit">$Zamień miejscami!</button>
+              <p>
 
 
               {% error_tab step_no=step.order as is_tab_error %}
@@ -127,8 +128,8 @@
 
       <form name="SwitchStepsForm" method="post" class="form form-inline"> <!-- Formularz usuwa wydarzenie -->
        {% csrf_token %}
-       <p class="wnioski2">
          {{ form2.receiver_step }}
+         {{ form2.sender_step }}
          {{ form2.receiver_step_order }}
       </form>
 
