--- a/crop_rotator/strona/templates/strona/plan.html
+++ b/crop_rotator/strona/templates/strona/plan.html
@@ -132,7 +132,7 @@
       </div>
       {% endif %}
 
-      <form name="SwitchStepsForm" method="post" class="form form-inline"> <!-- Formularz usuwa wydarzenie -->
+      <form id="SwitchStepsForm" method="post" class="form form-inline"> <!-- Formularz usuwa wydarzenie -->
        {% csrf_token %}
          {{ form2.receiver_step }}
          {{ form2.sender_step }}
