--- a/crop_rotator/strona/templates/strona/plan.html
+++ b/crop_rotator/strona/templates/strona/plan.html
@@ -71,16 +71,17 @@
 
               <h1>{{ step.title }}</h1>
               {% if user_editable %}
-              Zamień z innym krokiem w planie:
-              <p><button class="btn btn-link-3 btn-light" name="move_plan" value="{{ step.id }}" type="submit">$Zamień miejscami!</button></p>
-              $Zamień z krokiem:<select class="selectables" name="step_selection">
+
+              <p class="master0">Zamień z innym krokiem w planie:
+              <button class="btn btn-link-3 btn-light" name="move_plan" value="{{ step.id }}" type="submit">$Zamień miejscami!</button></p>
+              <p class="slave0" value="test_slave0">$Zamień z krokiem: <select class="selectables" name="step_selection">
                 <option value ="None" disabled>$Wybierz opcję:</option>
                 {% for step2 in steps %}
                   {% if step2 != step %}
                     <option name="{{ step2.id }}" value ="{{ step2.order }}">{{ step2.title }}</option>
                   {% endif %}
                 {% endfor %}
-              </select>
+              </select></p>
               <br>
                 {% if step.order == top_tier %}
                 <p><button class="btn btn-link-3 btn-light untoggle" value="0" name="safety_valve">$Usuń krok</button></p>
