Połowa formularza na wzorniku.

--- a/crop_rotator/rekruter/templates/registration/register.html
+++ b/crop_rotator/rekruter/templates/registration/register.html
@@ -16,7 +16,7 @@
             <p>Formularz zawiera błędy! Hasło nie może być zbyt proste.</p>
             {% endif %}
 
-            <P>{{ item.name }} {{ form.first_name }}</p>
+            <p>{{ item.name }} {{ form.first_name }}</p>
             <p>{{ item.email }} {{ form.email }}</p>
             <p>{{ item.password }} {{ form.password1 }}</p>
             <p>{{ item.re_password }} {{ form.password2 }}</p>
