--- a/crop_rotator/strona/templates/strona/step.html
+++ b/crop_rotator/strona/templates/strona/step.html
@@ -28,9 +28,13 @@
             <!-- W tym kroku zrób tak, że jeśli jakieś rośliny nie nadają się pod obornik, to wyświetl błąd na górze.
             Można też założyć, że rolnik wie jaki dać nawóz pod jakie rośliny i dać po prostu "dodaj właściwy nawóz" z onhover,
             że ta opcja poprawia kulturę gleby i sam rolnik ma dociec, który nawóz będzie najlepszy (uproszczenie programu).-->
-            <p>$Dodaj obornik: {{ form.add_manure }}</p>
+
             <!-- I tu pojawia się problem, bo trzeba dać możliwość userowi dodać obornik 2 razy - raz do kroku wczesnego, a raz do późnego.-->
-            <p>$Wczesny plon: {{ form.early_crop }}</p>
+            <p>$Wczesny plon: {{ form.early_crop }}; $Dodać nawóz?: {{ form.add_manure_early }} (Onhover - patrz komentarz)</p>
+            <p>$Późny plon: {{ form.late_crop }}; $Dodać nawóz?: {{ form.add_manure_late }} (Onhover - patrz komentarz)</p>
+            <!--Zrób coś, żeby wykrywał, że user dodał nawóz do obydwu kroków i informował go o ryzyku przenawożenia.
+            Coś w stylu "Dodałeś nawóz w obydwu krokach, czy na pewno wiesz co robisz?"-->
+
 
         </div>
         </div>
