--- a/crop_rotator/strona/templates/strona/step.html
+++ b/crop_rotator/strona/templates/strona/step.html
@@ -23,18 +23,22 @@
             <h6 class="text-center pt-3 ">$Edytujesz krok nr.{{ step.order }}:</h6>
             <h1 class="text-center pt-3 ">{{ step.title }}</h1>
             <h4 class="pt-2">{{ step.pubdate_short }}</h4>
-            <p>$Tytuł: {{ form.title }}</p>
-            <p>$Opis: {{ form.descr }}</p>
-            <!-- W tym kroku zrób tak, że jeśli jakieś rośliny nie nadają się pod obornik, to wyświetl błąd na górze.
-            Można też założyć, że rolnik wie jaki dać nawóz pod jakie rośliny i dać po prostu "dodaj właściwy nawóz" z onhover,
-            że ta opcja poprawia kulturę gleby i sam rolnik ma dociec, który nawóz będzie najlepszy (uproszczenie programu).-->
-
-            <!-- I tu pojawia się problem, bo trzeba dać możliwość userowi dodać obornik 2 razy - raz do kroku wczesnego, a raz do późnego.-->
-            <p>$Wczesny plon: {{ form.early_crop }}; $Dodać nawóz?: {{ form.add_manure_early }} (Onhover - patrz komentarz)</p>
-            <p>$Późny plon: {{ form.late_crop }}; $Dodać nawóz?: {{ form.add_manure_late }} (Onhover - patrz komentarz)</p>
-            <!--Zrób coś, żeby wykrywał, że user dodał nawóz do obydwu kroków i informował go o ryzyku przenawożenia.
-            Coś w stylu "Dodałeś nawóz w obydwu krokach, czy na pewno wiesz co robisz?"-->
-
+            <form name="StepChangeForm" method="post" class="form form-inline"> <!-- Formularz usuwa wydarzenie -->
+             {% csrf_token %}
+              <p>$Tytuł: {{ form.title }}</p>
+              <p>$Opis: {{ form.descr }}</p>
+              <!--Można założyć, że rolnik wie jaki dać nawóz pod jakie rośliny i dać po prostu "dodaj właściwy nawóz" z onhover,
+              że ta opcja poprawia kulturę gleby i sam rolnik ma dociec, który nawóz będzie najlepszy (uproszczenie programu).-->
+              <p>$Wczesny plon: {{ form.early_crop }}; $Dodać nawóz?: {{ form.add_manure_early }} (Onhover - patrz komentarz)</p>
+              <p>$Zniszcz wczesny plon na zielony nawóz: {{ form.is_early_crop_destroy }}</p>
+              <p>$Późny plon: {{ form.late_crop }}; $Dodać nawóz?: {{ form.add_manure_late }} (Onhover - patrz komentarz)</p>
+              <p>$Zniszcz późny plon na zielony nawóz: {{ form.is_late_crop_destroy }}</p>
+              <!--Zrób coś, żeby wykrywał, że user dodał nawóz do obydwu kroków i informował go o ryzyku przenawożenia.
+              Coś w stylu "Dodałeś nawóz w obydwu krokach, czy na pewno wiesz co robisz?"
+              Tak samo ze zniszczeniem na zielony nawóz i nawożeniem.
+              Ogólnie jak zaznaczy dwa dowolne checkboxy "nawożące" to mu wywal ten błąd.-->
+              <p><button class="btn btn-link-3 btn-light" name="save_step_changes" type="submit">$Zmień!</button></p>
+            </form>
 
         </div>
         </div>
