--- a/crop_rotator/templates/base.html
+++ b/crop_rotator/templates/base.html
@@ -54,11 +54,11 @@
           </li>
           {% endif %}
         <li>
-        <button class="btn btn-light my-2 my-sm-0 ">
+        <button class="btn btn-light">
             {% if user.is_authenticated %}
-              <a class="btn btn-link-3 btn-light head-foot" href="{% url 'logout' %}">{{ items.logout }}</a>
+              <a class="btn btn-link-4 btn-light head-foot" href="{% url 'logout' %}">{{ items.logout }} {{ user.username }}</a>
             {% else %}
-              <a class="btn btn-link-3 btn-light" href="{% url 'logger' %}">{{ items.login }}</a>
+              <a class="btn btn-link-4 btn-light" href="{% url 'logger' %}">{{ items.login }}</a>
             {% endif %}
         </li>
 
