--- a/crop_rotator/strona/templates/strona/family.html
+++ b/crop_rotator/strona/templates/strona/family.html
@@ -34,7 +34,7 @@
                 <div class="row">
                   <hr />
                   <br />
-                      <div class="col-4">
+                      <div class="col-md-4 shdwn">
                       {% with  master_slice1=ml1|stringformat:"s" %}
                       {% with  msl=":"|add:master_slice1 %}
                       {% for crop in house|slice:msl %}
@@ -43,7 +43,7 @@
                       {% endwith %}
                       {% endwith %}
                       </div>
-                      <div class="col-4">
+                      <div class="col-md-4 shdwn">
                       {% with  master_slice1=ml1|stringformat:"s" %}
                       {% with  middleman=master_slice1|add:":" %}
                       {% with  master_slice2=ml2|stringformat:"s" %}
@@ -56,7 +56,7 @@
                       {% endwith %}
                       {% endwith %}
                       </div>
-                      <div class="col-4">
+                      <div class="col-md-4 shdwn">
                       {% with  master_slice2=ml2|stringformat:"s" %}
                       {% with  msl=master_slice2|add:":" %}
                       {% for crop in house|slice:msl %}
